src/test/deca/etapeB/invalid/bad_type_affect0.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : mauvais typage pour l'affectation
// 

{
    int a;
    a = null;
}
